--- a/tacos.html
+++ b/tacos.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <div class="logo">Taco's Kft.</div>
+    <div class="logo">🌮 Taco's Kft.</div>
     <nav>
       <ul>
         <li><a href="#home">Kezdőlap</a></li>
@@ -20,26 +20,28 @@
 
   <section id="home">
     <h1>Üdvözlünk a Taco's Kft.-nél!</h1>
-    <p>Fedezd fel ízletes tacóinkat és egyéb mexikói ételeinket.</p>
+    <p>Friss, ízletes mexikói ételek minden nap! Próbáld ki különlegességeinket.</p>
     <a href="#menu" class="button">Tekintsd meg a menüt</a>
   </section>
 
   <section id="menu">
     <h2>Menü</h2>
-    <div class="menu-item">
-      <h3>Csirkés Tacos</h3>
-      <p>Lágy tortillába töltött csirkemell darabok friss zöldségekkel.</p>
-      <span>1 490 Ft</span>
-    </div>
-    <div class="menu-item">
-      <h3>Marhahúsos Burrito</h3>
-      <p>Ízletes marhahússal és sajtokkal töltött burrito.</p>
-      <span>1 790 Ft</span>
-    </div>
-    <div class="menu-item">
-      <h3>Vegetáriánus Quesadilla</h3>
-      <p>Sajttal és zöldségekkel töltött quesadilla, friss guacamoléval.</p>
-      <span>1 390 Ft</span>
+    <div class="menu-items">
+      <div class="menu-item">
+        <h3>Csirkés Tacos</h3>
+        <p>Lágy tortillába töltött csirkemell darabok friss zöldségekkel.</p>
+        <span>1 490 Ft</span>
+      </div>
+      <div class="menu-item">
+        <h3>Marhahúsos Burrito</h3>
+        <p>Ízletes marhahússal és sajtokkal töltött burrito.</p>
+        <span>1 790 Ft</span>
+      </div>
+      <div class="menu-item">
+        <h3>Vegetáriánus Quesadilla</h3>
+        <p>Sajttal és zöldségekkel töltött quesadilla, friss guacamoléval.</p>
+        <span>1 390 Ft</span>
+      </div>
     </div>
   </section>
 
