--- a/tacos.html
+++ b/tacos.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Taco's Kft.</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <header>
@@ -46,8 +46,8 @@
   </section>
 
   <footer id="contact">
-    <p>&copy; 2023 Taco's Kft. Minden jog fenntartva.</p>
-    <p>Elérhetőség: +36 1 234 5678 | info@tacoskft.hu</p>
+    <p>&copy; 2024 Taco's Kft. Minden jog fenntartva.</p>
+    <p>Elérhetőség: +36 30 314 7370 | info@tacoskft.hu</p>
   </footer>
 </body>
 </html>
