--- a/tacos.html
+++ b/tacos.html
@@ -20,7 +20,8 @@
 
   <section id="home">
     <h1>Üdvözlünk a Taco's Kft.-nél!</h1>
-    <p>Friss, ízletes mexikói ételek minden nap! Próbáld ki különlegességeinket.</p>
+    <p>En cada taco, una explosión de sabores auténticos que te transportan directamente a las calles de México. 
+      Disfruta de la tradición, el frescor y la pasión en cada bocado..</p>
     <a href="#menu" class="button">Tekintsd meg a menüt</a>
   </section>
 
