--- a/tacos.html
+++ b/tacos.html
@@ -7,48 +7,80 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <div class="logo">🌮 Taco's Kft.</div>
-    <nav>
-      <ul>
-        <li><a href="#home">Kezdőlap</a></li>
-        <li><a href="#menu">Menü</a></li>
-        <li><a href="#contact">Kapcsolat</a></li>
-      </ul>
-    </nav>
-  </header>
-
-  <section id="home">
-    <h1>Üdvözlünk a Taco's Kft.-nél!</h1>
-    <p>En cada taco, una explosión de sabores auténticos que te transportan directamente a las calles de México. 
-      Disfruta de la tradición, el frescor y la pasión en cada bocado..</p>
-    <a href="#menu" class="button">Tekintsd meg a menüt</a>
-  </section>
-
-  <section id="menu">
-    <h2>Menü</h2>
-    <div class="menu-items">
-      <div class="menu-item">
-        <h3>Csirkés Tacos</h3>
-        <p>Lágy tortillába töltött csirkemell darabok friss zöldségekkel.</p>
-        <span>1 490 Ft</span>
+    <header>
+      <div class="logo">🌮 Taco's Kft.</div>
+      <nav>
+        <ul>
+          <li><a href="#home">Kezdőlap</a></li>
+          <li><a href="#menu">Menü</a></li>
+          <li><a href="#contact">Kapcsolat</a></li>
+        </ul>
+      </nav>
+    </header>
+  
+    <!-- Kezdőlap szakasz -->
+    <section id="home">
+      <h1>Üdvözlünk a Taco's Kft.-nél!</h1>
+      <p>El auténtico sabor de México en cada taco, una explosión de frescura y tradición!</p>
+      <a href="#menu" class="button">Tekintsd meg a menüt</a>
+    </section>
+  
+    <!-- Menü szakasz -->
+    <section id="menu">
+      <h1>Menü</h1>
+      <p>Válassz kedvedre éttermünk ínycsiklandó mexikói fogásai közül!</p>
+      <div class="menu-items">
+        <div class="menu-item">
+          <img src="tacos.png" alt="Csirkés Tacos">
+          <h3>Csirkés Tacos</h3>
+          <p>Lágy tortillába töltött csirkemell darabok friss zöldségekkel és fűszeres szósszal.</p>
+          <span>1 490 Ft</span>
+        </div>
+        <div class="menu-item">
+          <img src="burrito.png" alt="Marhahúsos Burrito">
+          <h3>Marhahúsos Burrito</h3>
+          <p>Ízletes marhahússal, sajtokkal és friss zöldségekkel töltött burrito, tejföllel tálalva.</p>
+          <span>1 790 Ft</span>
+        </div>
+        <div class="menu-item">
+          <img src="quesadilla.png" alt="Csirkés Quesadilla">
+          <h3>Vegetáriánus Quesadilla</h3>
+          <p>Sajttal, csirkével és friss zöldségekkel töltött quesadilla, guacamoléval.</p>
+          <span>1 390 Ft</span>
+        </div>
       </div>
-      <div class="menu-item">
-        <h3>Marhahúsos Burrito</h3>
-        <p>Ízletes marhahússal és sajtokkal töltött burrito.</p>
-        <span>1 790 Ft</span>
+    </section>
+  
+    <!-- Kapcsolat szakasz -->
+    <section id="contact">
+      <h1>Kapcsolat</h1>
+      <p>Ha bármilyen kérdésed van, vagy szeretnél rendelni, ne habozz kapcsolatba lépni velünk!</p>
+      <!-- Kapcsolatfelvételi űrlap -->
+      <div class="contact-form">
+        <form action="mailto:info@tacoskft.hu" method="POST" enctype="text/plain">
+          <label for="name">Név</label>
+          <input type="text" id="name" name="name" required>
+  
+          <label for="email">Email cím</label>
+          <input type="email" id="email" name="email" required>
+  
+          <label for="message">Üzenet</label>
+          <textarea id="message" name="message" required></textarea>
+  
+          <button type="submit">Üzenet küldése</button>
+        </form>
       </div>
-      <div class="menu-item">
-        <h3>Vegetáriánus Quesadilla</h3>
-        <p>Sajttal és zöldségekkel töltött quesadilla, friss guacamoléval.</p>
-        <span>1 390 Ft</span>
+      <div class="contact-info">
+        <p><strong>Cím:</strong> 3523 Miskolc, Tolna utca 4.</p>
+        <p><strong>Telefonszám:</strong> +36 30 254 7890</p>
+        <p><strong>Email:</strong> <a href="mailto:info@tacoskft.hu">info@tacoskft.hu</a></p>
       </div>
-    </div>
-  </section>
-
-  <footer id="contact">
-    <p>&copy; 2024 Taco's Kft. Minden jog fenntartva.</p>
-    <p>Elérhetőség: +36 30 314 7370 | info@tacoskft.hu</p>
-  </footer>
-</body>
-</html>
+    </section>
+  
+    <footer>
+      <p>&copy; 2024 Taco's Kft. Minden jog fenntartva.</p>
+      <p>Elérhetőség: +36 30 254 7890 | info@tacoskft.hu</p>
+    </footer>
+  </body>
+  </html>
+  
