--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
     <header>
         <div class="container">
             <div class="logo">
-                <img src="images/mini logo.png" alt="Mini Miskolc Logó">
+                <img src="mini logo.png" alt="Mini Miskolc Logó">
             </div>
             <nav>
                 <ul>
@@ -36,21 +36,21 @@
         <div class="container">
             <h2>Fedezze fel autóinkat</h2>
             <div class="car-item">
-                <img src="images/mini_cooper.jpg" alt="Mini Cooper" class="car-image">
+                <img src="mini_cooper.jpg" alt="Mini Cooper" class="car-image">
                 <h3>Mini Cooper</h3>
                 <p>A klasszikus Mini stílus és dinamika egyedülálló kombinációja.</p>
                 <p class="price">Ár: 10,990,000 Ft-tól</p>
                 <a href="https://www.mini.hu/hu_HU/home/range/mini-cooper-3-door.html">Tudjon meg többet róla!</a>
             </div>
             <div class="car-item">
-                <img src="images/mini_countryman.jpg" alt="Mini Countryman" class="car-image">
+                <img src="mini_countryman.jpg" alt="Mini Countryman" class="car-image">
                 <h3>Mini Countryman</h3>
                 <p>A Mini tökéletes választása a kalandokhoz, nagyobb térrel és erősebb motorral.</p>
                 <p class="price">Ár: 12,450,000 Ft-tól</p>
                 <a href="https://www.mini.hu/hu_HU/home/range/new-mini-countryman.html">Tudjon meg többet róla!</a>
             </div>
             <div class="car-item">
-                <img src="images/mini_john_cooper.jpg" alt="Mini John Cooper Works" class="car-image">
+                <img src="mini_john_cooper.jpg" alt="Mini John Cooper Works" class="car-image">
                 <h3>Mini John Cooper Works</h3>
                 <p>A sportos Mini, ami izgalmas vezetési élményt kínál, igazi autórajongóknak.</p>
                 <p class="price">Ár: 15,500,000 Ft-tól</p>
