--- a/modellek.html
+++ b/modellek.html
@@ -11,7 +11,7 @@
     <header>
         <div class="container">
             <div class="logo">
-                <img src="images/mini logo.png" alt="Mini Miskolc Logo">
+                <img src="mini logo.png" alt="Mini Miskolc Logo">
             </div>
             <nav>
                 <ul>
@@ -26,21 +26,21 @@
         <div class="container">
             <h2>Mini Modellek</h2>
             <div class="model-item">
-                <img src="images/mini_cooper.jpg" alt="Mini Cooper" class="model-image">
+                <img src="mini_cooper.jpg" alt="Mini Cooper" class="model-image">
                 <h3>Mini Cooper</h3>
                 <p>A klasszikus Mini stílus és dinamika egyedülálló kombinációja.</p>
                 <p class="price">Ár: 10,990,000 Ft-tól</p>
                 <a href="https://www.mini.hu/hu_HU/home/range/mini-cooper-3-door.html">Tudjon meg többet róla!</a>
             </div>
             <div class="model-item">
-                <img src="images/mini_countryman.jpg" alt="Mini Countryman" class="model-image">
+                <img src="mini_countryman.jpg" alt="Mini Countryman" class="model-image">
                 <h3>Mini Countryman</h3>
                 <p>A Mini tökéletes választása a kalandokhoz, nagyobb térrel és erősebb motorral.</p>
                 <p class="price">Ár: 12,450,000 Ft-tól</p>
                 <a href="https://www.mini.hu/hu_HU/home/range/new-mini-countryman.html">Tudjon meg többet róla!</a>
             </div>
             <div class="model-item">
-                <img src="images/mini_john_cooper.jpg" alt="Mini John Cooper Works" class="model-image">
+                <img src="mini_john_cooper.jpg" alt="Mini John Cooper Works" class="model-image">
                 <h3>Mini John Cooper Works</h3>
                 <p>A sportos Mini, ami izgalmas vezetési élményt kínál, igazi autórajongóknak.</p>
                 <p class="price">Ár: 15,500,000 Ft-tól</p>
@@ -48,7 +48,7 @@
             </div>
             <!-- Új modellek -->
             <div class="model-item">
-                <img src="images/Mini convertible.jpg" alt="Mini Convertible" class="model-image">
+                <img src="Mini convertible.jpg" alt="Mini Convertible" class="model-image">
                 <h3>Mini Convertible</h3>
                 <p>Élvezze a szabad levegőt a Mini kabrióval, egy igazi nyári élmény!</p>
                 <p class="price">Ár: 14,990,000 Ft-tól</p>
