--- a/home.html
+++ b/home.html
@@ -18,6 +18,7 @@
                 <ul>
                     <li><a href="./home.html">Kezdőlap</a></li>
                     <li><a href="./modellek.html">Modellek</a></li>
+                    <li><a href="./contact.html">Kapxsolat</li>
                 </ul>
             </nav>
         </div>
