--- a/home.html
+++ b/home.html
@@ -20,7 +20,12 @@
                     <li><a href="./modellek.html">Modellek</a></li>
                     <li><a href="./contact.html">Kapxsolat</li>
                 </ul>
+                <!-- Fordító gomb -->
+                <div id="language-switcher">
+                    <button id="lang-btn">EN</button>
+                </div>
             </nav>
+            
         </div>
     </header>
 
