--- a/home.html
+++ b/home.html
@@ -18,11 +18,13 @@
                 <ul>
                     <li><a href="./home.html">Kezdőlap</a></li>
                     <li><a href="./modellek.html">Modellek</a></li>
-                    <li><a href="./contact.html">Kapxsolat</li>
+                    <li><a href="./contact.html">Kapcsolat</li>
                 </ul>
                 <!-- Fordító gomb -->
                 <div id="language-switcher">
-                    <button id="lang-btn">EN</button>
+                    <button id="lang-btn">
+                        <i>EN</i>
+                    </button> 
                 </div>
             </nav>
             
