--- a/home.html
+++ b/home.html
@@ -18,7 +18,7 @@
                 <ul>
                     <li><a href="./home.html">Kezdőlap</a></li>
                     <li><a href="./modellek.html">Modellek</a></li>
-                    <li><a href="./contact.html">Kapcsolat</li>
+                    <li><a href="./contact.html">Kapcsolat</a></li>
                 </ul>
                 <!-- Fordító gomb -->
                 <div id="language-switcher">
