--- a/home.html
+++ b/home.html
@@ -7,6 +7,7 @@
     <title>Mini Miskolc - Innováció és Minőség</title>
     <link rel="stylesheet" href="home.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/particles.js"></script>
 </head>
 <body>
     <header>
@@ -18,7 +19,7 @@
                 <ul>
                     <li><a href="./home.html">Kezdőlap</a></li>
                     <li><a href="./modellek.html">Modellek</a></li>
-                    <li><a href="./contact.html">Kapcsolat</a></li>
+                    <li><a href="./rolunk.html">Rólunk</a></li>
                 </ul>
                 <!-- Fordító gomb -->
                 <div id="language-switcher">
@@ -27,7 +28,9 @@
                     </button> 
                 </div>
             </nav>
-            
+            <div class="animation-container">
+                <img src="mini_car.png" alt="Mini autó" class="mini-car">
+            </div>
         </div>
     </header>
 
@@ -64,16 +67,21 @@
                 <p class="price">Ár: 15,500,000 Ft-tól</p>
                 <a href="https://www.mini.hu/hu_HU/home/range/john-cooper-works.html">Tudjon meg többet róla!</a>
             </div>
+            <div id="particles-js"></div>
         </div>
     </section>
 
     <footer>
         <div class="container">
             <p>&copy; 2025 Mini Miskolc. Minden jog fenntartva.</p>
+            <h3>Elérhetőségünk</h3>
+                <p>Email: info@minimiskolc.hu</p>
+                <p>Telefon: +36 30 225 6783/ +36 70 328 9976</p>
         </div>
     </footer>
 
     <script src="script.js"></script>
     <script src="lang_cahnge.js"></script>
+    <script src="particles.js"></script>
 </body>
 </html>
