--- a/modellek.html
+++ b/modellek.html
@@ -17,7 +17,13 @@
                 <ul>
                     <li><a href="./home.html">Kezdőlap</a></li>
                     <li><a href="./modellek.html">Modellek</a></li>
+                    <li><a href="./rolunk.html">Rólunk</a></li>
                 </ul>
+                <!-- Fordító gomb -->
+                <div id="language-switcher">
+                    <button id="lang-btn">
+                        <i>EN</i>
+                    </button> 
             </nav>
         </div>
     </header>
@@ -60,9 +66,13 @@
     <footer>
         <div class="container">
             <p>&copy; 2025 Mini Miskolc. Minden jog fenntartva.</p>
+            <h3>Elérhetőségünk</h3>
+                <p>Email: info@minimiskolc.hu</p>
+                <p>Telefon: +36 30 225 6783/ +36 70 328 9976</p>
         </div>
     </footer>
 
     <script src="script.js"></script>
+    <script src="lang_cahnge.js"></script>
 </body>
 </html>
