--- a/home.html
+++ b/home.html
@@ -7,6 +7,9 @@
     <title>Mini Miskolc - Innováció és Minőség</title>
     <link rel="stylesheet" href="home.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Tektur:wght@400..900&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/particles.js"></script>
 </head>
 <body>
@@ -28,9 +31,6 @@
                     </button> 
                 </div>
             </nav>
-            <div class="animation-container">
-                <img src="mini_car.png" alt="Mini autó" class="mini-car">
-            </div>
         </div>
     </header>
 
@@ -82,6 +82,5 @@
 
     <script src="script.js"></script>
     <script src="lang_cahnge.js"></script>
-    <script src="particles.js"></script>
 </body>
 </html>
