--- a/rolunk.html
+++ b/rolunk.html
@@ -69,6 +69,14 @@
             </div>
         </div>
     </section>
+    <footer>
+        <div class="container">
+            <p>&copy; 2025 Mini Miskolc. Minden jog fenntartva.</p>
+            <h3>Elérhetőségünk</h3>
+                <p>Email: info@minimiskolc.hu</p>
+                <p>Telefon: +36 30 225 6783/ +36 70 328 9976</p>
+        </div>
+    </footer>
     <script src="script.js"></script>
     <script src="lang_cahnge.js"></script>
     <script src="rolunk.js"></script>
