--- a/rolunk.html
+++ b/rolunk.html
@@ -58,7 +58,7 @@
     
                 <!-- Kártya 3 -->
                 <div class="card">
-                    <img src="team_member3.jpg" alt="Csapattag 3" class="card-image">
+                    <img src="received_1166781703922933.jpeg" alt="Csapattag 3" class="card-image">
                     <h3>Enyedi Sándor</h3>
                     <p class="position">Dokumentáló</p>
                     <button class="info-btn" onclick="toggleDescription('desc3')">Tudjon meg többet</button>
